<resources>
    <string name="app_name">YujiaJI-score</string>
    <string name="scoreA">08</string>
    <string name="scoreB">05</string>
    <string name="team_a">Team A</string>
    <string name="vs">VS</string>
    <string name="team_b">Team B</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="score_1">score 1</string>
    <string name="score_2">score 2</string>
    <string name="score_3">score 3</string>
    <string name="score_4">score 4</string>
</resources>